test/JDBC/expected/BABEL-NEXT-VALUE-FOR.out
CREATE SEQUENCE seq_949 AS INT START WITH 1 INCREMENT BY 1;
GO
CREATE TABLE table_949 (table_key INT NOT NULL PRIMARY KEY DEFAULT NEXT VALUE FOR seq_949, str NVARCHAR(200));
GO

INSERT INTO table_949 (str) VALUES 
('a'), 
('b'), 
('c'), 
('d');
GO
~~ROW COUNT: 4~~


SELECT * FROM table_949 ORDER BY table_key;
GO
~~START~~
int#!#nvarchar
1#!#a
2#!#b
3#!#c
4#!#d
~~END~~


SELECT NEXT VALUE FOR seq_949;
GO
~~START~~
bigint
5
~~END~~


DROP TABLE table_949;
GO

SELECT NEXT VALUE FOR null;
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error near 'FOR' at line 1 and character position 18)~~


SELECT NEXT VALUE FOR not_a_seq;
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: relation "not_a_seq" does not exist)~~



DROP SEQUENCE seq_949;
GO
